    * Config and command-line arguments are parsed and loaded at import time,
      rather than when the handler is initialized.
    * Routes are compiled at startup instead of being compiled whenever a 
      request is handled.  This can increase performances up to 50%.
    * FIX Params are not polluted anymore by the 'splat' keyword when no capture
      is needed by the pattern.

    [ Daniel Tasov ]
    * Plack environment is propagated to Dancer if none specified.

    [ Sawyer X ]
    * Route Caching with size and path number limits: Dancer::Route::Cache.
    * FIX for issue #39.
    * Dancer::ModuleLoader documentation
    * Cleaned Dancer::Template::Abstract docs
    * Cleaner die in Dancer::Engine if can't find engine
    * Added default route example in Dancer::Cookbook

Dancer 1.150

    [ Alexis Sukrieh ]
    * Refactored all core engines with Dancer::Engine
    * Support for engine configuration via config files
    * Each core template engine now uses start_tag/stop_tag from the
      configuration instead of harcoding '<%' and '%>'.
    * FIX for issue #34
      Cookies can now be used when the application is ran under a Plack 
      server.
    
    [ David Precious ]
    * Lots of documentation cleaning and fixes.
    * Make the session available to the views, if possible.
    * Added Dancer::Cookbook to provide lots of concrete examples for
      newcomers.
    * Helper script `dancer' now provides a default favicon.ico in the
      application public directory.
    * FIX for issue #30
      Added 'config' method to provide easy access to app config

    [ Anirvan Chatterjee ]
    * Various documentation typo fixes

    [ Danijel Tasov ]
    * FIX for issue #24
      Dancer now depends on MIME::Types rather than using
      File::MimeInfo::Simple which uses a fork().

    [ Paul Driver ]
    * Support for virtual location.
      It's now possible to mount a Dancer app under a user-defined prefix.

    [ Franck Cuny ]
    * Test scripts cleanup: