@@ -3,7 +3,7 @@
 # takes care of rendering it.
 use strict;
 use warnings;
-use Test::More import => ['!pass'], tests => 10;
+use Test::More import => ['!pass'], tests => 4;
 
 use lib 't';
 use TestUtils;
@@ -17,11 +17,13 @@ use TestUtils;
     get '/' => sub { 1 };
 }
 
-my $req = fake_request(GET => '/hello');
-Dancer::SharedData->request($req);
+Dancer::Route->init;
 
-my $resp = Dancer::Renderer::get_action_response();
-
+my $resp = get_response_for_request('GET' => '/hello');
 ok( defined($resp), "response found for /hello");
-is $resp->{content}, 'H', "content looks good";
+is $resp->{content}, "Hello\n", "content looks good";
 
+$resp = get_response_for_request('GET' => '/falsepage');
+ok( defined($resp), "response found for non existent page");
+
+is $resp->{status}, 404, "response is 404";
